--- a/faculty/faculty_marksattendance.html
+++ b/faculty/faculty_marksattendance.html
@@ -135,7 +135,7 @@
             <h2>Faculty Bridge</h2>
         </div>
         <nav class="navbar">
-            <a href="faculty.html" class="active">
+            <a href="faculty.html">
                 <span class="material-icons-sharp">home</span>
                 Home
             </a>
@@ -147,7 +147,7 @@
                 <span class="material-icons-sharp">assessment</span>
                 Marks
             </a>
-            <a href="faculty_marksattendance.html">
+            <a href="faculty_marksattendance.html"  class="active">
                 <span class="material-icons-sharp">check_circle</span>
                 Mark & Attendance
             </a>
