--- a/faculty/faculty_post_announcements.html
+++ b/faculty/faculty_post_announcements.html
@@ -17,11 +17,11 @@
             <h2>Faculty Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="faculty.html" class="active">
+            <a href="faculty.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
-            <a href="faculty_post_announcements.html">
+            <a href="faculty_post_announcements.html" class="active">
                 <span class="material-icons-sharp">announcement</span>
                 <h3>Post Announcements</h3>
             </a>
