--- a/faculty/faculty_view_students.html
+++ b/faculty/faculty_view_students.html
@@ -131,7 +131,7 @@
             <h2>Faculty Bridge</h2>
         </div>
         <nav class="navbar">
-            <a href="faculty.html" class="active">
+            <a href="faculty.html">
                 <span class="material-icons-sharp">home</span> Home
             </a>
             <a href="faculty_post_announcements.html">
@@ -143,7 +143,7 @@
             <a href="faculty_marksattendance.html">
                 <span class="material-icons-sharp">check_circle</span> Marks & Attendance
             </a>
-            <a href="faculty_view_students.html">
+            <a href="faculty_view_students.html"  class="active">
                 <span class="material-icons-sharp">grid_view</span> View Students
             </a>
             <a href="timetable.html">
