--- a/faculty/timetable.html
+++ b/faculty/timetable.html
@@ -16,7 +16,7 @@
             <h2>Faculty Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="faculty.html" class="active">
+            <a href="faculty.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
@@ -36,7 +36,7 @@
                 <span class="material-icons-sharp">grid_view</span>
                 <h3>View Students</h3>
             </a>
-            <a href="timetable.html">
+            <a href="timetable.html"  class="active">
                 <span class="material-icons-sharp">today</span>
                 <h3>Time Table</h3>
             </a>
