--- a/students/attendance.html
+++ b/students/attendance.html
@@ -16,7 +16,7 @@
                 <h2>StudentBridge</h2>
             </div>
             <div class="navbar">
-                <a href="studentdashboard.html" class="active">
+                <a href="studentdashboard.html">
                     <span class="material-icons-sharp">home</span>
                     <h3>Home</h3>
                 </a>
@@ -24,7 +24,7 @@
                     <span class="material-icons-sharp">today</span>
                     <h3>Time Table</h3>
                 </a>
-                <a href="attendance.html">
+                <a href="attendance.html" class="active">
                     <span class="material-icons-sharp">check_circle</span>
                     <h3>Attendance</h3>
                 </a>
@@ -55,6 +55,8 @@
         </header>
         <main>
             <div>
+                <br>
+                <br>
                 <h1>Attendance</h1>
             </div>
             <table>
