--- a/faculty/faculty_add_update_marks.html
+++ b/faculty/faculty_add_update_marks.html
@@ -120,7 +120,7 @@
                 <h2>Faculty Bridge</h2>
             </div>
             <div class="navbar">
-                <a href="faculty.html" class="active">
+                <a href="faculty.html">
                     <span class="material-icons-sharp">home</span>
                     <h3>Home</h3>
                 </a>
@@ -128,7 +128,7 @@
                     <span class="material-icons-sharp">announcement</span>
                     <h3>Post Announcements</h3>
                 </a>
-                <a href="faculty_add_update_marks.html">
+                <a href="faculty_add_update_marks.html" class="active">
                     <span class="material-icons-sharp">assessment</span>
                     <h3>Add/Update Marks</h3>
                 </a>
