--- a/students/announcement.html
+++ b/students/announcement.html
@@ -17,7 +17,7 @@
             <h2>Student Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="studentdashboard.html" class="active">
+            <a href="studentdashboard.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
@@ -37,7 +37,7 @@
                 <span class="material-icons-sharp">assessment</span>
                 <h3>Marks</h3>
             </a>
-            <a href="announcement.html">
+            <a href="announcement.html"  class="active">
                 <span class="material-icons-sharp">announcement</span>
                 <h3>Announcements</h3>
             </a>
