--- a/students/exam.html
+++ b/students/exam.html
@@ -30,7 +30,7 @@
             <h2>Student Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="studentdashboard.html" class="active">
+            <a href="studentdashboard.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
@@ -42,7 +42,7 @@
                 <span class="material-icons-sharp">check_circle</span>
                 <h3>Attendance</h3>
             </a>
-            <a href="exam.html">
+            <a href="exam.html" class="active">
                 <span class="material-icons-sharp">grid_view</span>
                 <h3>Examination</h3>
             </a>
