--- a/students/marks.html
+++ b/students/marks.html
@@ -30,7 +30,7 @@
             <h2>Student Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="studentdashboard.html" class="active">
+            <a href="studentdashboard.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
@@ -46,7 +46,7 @@
                 <span class="material-icons-sharp">grid_view</span>
                 <h3>Examination</h3>
             </a>
-            <a href="marks.html">
+            <a href="marks.html" class="active">
                 <span class="material-icons-sharp">assessment</span>
                 <h3>Marks</h3>
             </a>
