--- a/students/timetable.html
+++ b/students/timetable.html
@@ -16,11 +16,11 @@
             <h2>Student Bridge</h2>
         </div>
         <div class="navbar">
-            <a href="studentdashboard.html" class="active">
+            <a href="studentdashboard.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
-            <a href="timetable.html">
+            <a href="timetable.html" class="active">
                 <span class="material-icons-sharp">today</span>
                 <h3>Time Table</h3>
             </a>
